--- a/index.html
+++ b/index.html
@@ -3,17 +3,110 @@
 
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bootstrap boiler</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" href="css/style.css">
+<title>Bootstrap Theme</title>
 </head>
 
 <body>
+<!-- START HERE -->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<div class="container">
+<a href="index.html" class="navbar-brand">LoopLab</a>
+<button class="navbar-toggler" data-toggle="collapse" data-target="#navCollapse">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+<div class="collapse navbar-collapse" id="navCollapse">
+<ul class="navbar-nav ml-auto">
+<li class="nav-item">
+<a href="#home" class="nav-link">HOME</a>
+</li>
+<li class="nav-item">
+<a href="#explore-head-section" class="nav-link">Explore</a>
+</li>
+<li class="nav-item">
+<a href="#create-head-section" class="nav-link">Create</a>
+</li>
+<li class="nav-item">
+<a href="#share-head-section" class="nav-link">Share</a>
+</li>
+</ul>
+</div>
+</div>
+</nav>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- Home Section -->
+<header id="home-section">
+<div class="dark-overlay">
+<div class="home-inner container">
+<div class="row">
+<!---Displays none when screen is small, dispalys block when screen  is large-->
+<div class="col-lg-8 d-none d-lg-block">
+<h1 class="display-4">Build<strong>social profiles</strong>and gain revenue<strong>profits</strong> </h1>
+<div class="d-flex">
+<div class="p-4 align-self-start">
+<i class="fas fa-check fa-2x"></i>
+</div>
+<div class="p-4 align-self-end">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, ducimus magnam? Reiciendis dicta molestias quod.
+</div>
+</div>
+<div class="d-flex">
+<div class="p-4 align-self-start">
+<i class="fas fa-check fa-2x"></i>
+</div>
+<div class="p-4 align-self-end">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, ducimus magnam? Reiciendis dicta molestias quod.
+</div>
+</div>
+<div class="d-flex">
+<div class="p-4 align-self-start">
+<i class="fas fa-check fa-2x"></i>
+</div>
+<div class="p-4 align-self-end">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, ducimus magnam? Reiciendis dicta molestias quod.
+</div>
+</div>
+</div>
+<div class="col-lg-4">
+<div class="card bg-primary text-center card-form">
+<div class="card-body">
+<h3>Sign Up</h3>
+<p>Please Fill the form to sign up</p>
+<form>
+<div class="form-group">
+<input type="text" placeholder="username" class="form-control form-control-lg">
+</div>
+<div class="form-group">
+<input type="email" placeholder="Email" class="form-control form-control-lg">
+</div>
+<div class="form-group">
+<input type="password" placeholder="Password" class="form-control form-control-lg">
+</div>
+<div class="form-group">
+<input type="password" placeholder="Confirm password" class="form-control form-control-lg">
+</div>
+<input type="submit" value="Submit" class="btn btn-outline-light  btn-block">
+</form>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</header>
+
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<script>
+// Get the current year for the copyright
+$('#year').text(new Date().getFullYear());
+</script>
 </body>
 
 </html>
