--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, ducimus magnam? 
 </div>
 </header>
 
+<!-- Explore section -->
+<!-- Explore-Head -->
+<section id="explore-head-section">
+<div class="container">
+<div class="row">
+<div class="col text-center py">
+<h1 class="display-4">Explore</h1>
+<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, expedita! Iusto eum voluptate voluptates qui, maxime recusandae atque nam. Veritatis odit amet impedit laborum sequi velit magnam reprehenderit, ducimus aut.</p>
+<a href="#" class="btn btn-outline-secondary">Find out more</a>
+</div>
+</div>
+</div>
+</section>
+
+<!--Explore-head-->
+<section id="explore-section" class="bg-light text-muted py-5">
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+<img src="img/explore-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+</div>
+<div class="col-md-6">
+<h3>Explore & Connect</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente rerum atque accusantium ipsa deserunt animi in perferendis blanditiis?</p>
+<div class="d-flex">
+<div class="p-4 align-self-start">
+<i class="fas fa-check fa-2x"></i>
+</div>
+<div class="p-4 align-self-end">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sint aperiam qui, dolorum dolor vitae.
+</div>
+</div>
+<div class="d-flex">
+<div class="p-4 align-self-start">
+<i class="fas fa-check fa-2x"></i>
+</div>
+<div class="p-4 align-self-end">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sint aperiam qui, dolorum dolor vitae.
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
